Root is now overflow hidden to prevent scrollbars after rocket launch

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body,
 #root,
 #root > div {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
